<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="_reminder">Remind in %s</string>

    <string name="set_reminder">Set reminder</string>
    <string name="select_date">Select date</string>
    <string name="semester">Semester</string>
    <string name="week">Week</string>

    <string name="add_routine">Add routine</string>
    <string name="title">Title</string>
    <string name="associate_with">Associate with</string>
    <string name="add_task">Add task</string>
    <string name="add_to_my_timetable">Add to my timetable</string>
    <string name="add_to_timetable">Add to timetable</string>
    <string name="date">Date</string>
    <string name="location">Location</string>
    <string name="details">Details</string>
    <string name="add">Add</string>
    <string name="routine_info">ROUTINE INFO</string>
    <string name="time">Time</string>
    <string name="days">Days</string>
    <string name="reminder">Reminder</string>
    <string name="task_info">TASK INFO</string>
    <string name="start">Start</string>
    <string name="end">End</string>

    <string name="mon">Mon</string>
    <string name="tue">Tue</string>
    <string name="wed">Wed</string>
    <string name="thu">Thu</string>
    <string name="fri">Fri</string>
    <string name="sat">Sat</string>
    <string name="sun">Sun</string>

    <string name="tasks">Tasks</string>
    <string name="timetable">Timetable</string>

    <string name="timetable_notification_channel_description">Timetable event notifications</string>
    <string name="timetable_notification_channel_id" translatable="false">timetable_channel</string>
    <string name="timetable_notification_channel_name">Timetable</string>

    <string name="timetable_notification_title">%s: %s left</string>


</resources>