<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
            name="task"
            type="com.naltynbekkz.timetable.model.Occurrence" />
    </data>

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <View
                android:id="@+id/arrow"
                android:layout_width="36dp"
                android:layout_height="11dp"
                android:layout_gravity="center_horizontal"
                android:layout_marginStart="24dp"
                android:layout_marginTop="12dp"
                android:layout_marginEnd="24dp"
                android:background="@drawable/ic_bottom_sheet_arrow_down" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="24dp"
                android:layout_marginTop="20dp"
                android:gravity="center"
                android:text="@string/add_to_timetable"
                android:textAppearance="@style/TopicTitleText" />

            <com.google.android.material.textfield.TextInputLayout
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="16dp"
                android:layout_marginVertical="8dp"
                android:enabled="false"
                android:hint="@string/title">

                <com.google.android.material.textfield.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@{task.title}" />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="16dp"
                android:layout_marginVertical="8dp"
                android:enabled="false"
                android:hint="@string/details">

                <com.google.android.material.textfield.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:ellipsize="end"
                    android:singleLine="true"
                    android:text="@{task.details}" />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="16dp"
                android:layout_marginVertical="8dp"
                android:enabled="false"
                android:hint="@string/location">

                <com.google.android.material.textfield.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@{task.location}" />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="16dp"
                android:layout_marginVertical="8dp"
                android:enabled="false"
                android:hint="@string/date">

                <com.google.android.material.textfield.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@{task.getStartDate()}" />

            </com.google.android.material.textfield.TextInputLayout>

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="16dp"
                android:layout_marginVertical="8dp">

                <TextView
                    android:id="@+id/notify"
                    android:layout_width="match_parent"
                    android:layout_height="56dp"
                    android:background="@drawable/background_semitransparent"
                    android:gravity="center_vertical"
                    android:paddingStart="12dp"
                    android:paddingEnd="12dp"
                    android:text="@string/set_reminder"
                    android:textAppearance="@style/MainColorBold"
                    app:layout_constraintTop_toTopOf="parent" />

                <TextView
                    android:id="@+id/notification"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="16dp"
                    android:layout_marginEnd="4dp"
                    android:gravity="end"
                    android:text="@{task.getStringNotificationTime()}"
                    android:textAppearance="@style/BigDetail"
                    app:layout_constraintBottom_toBottomOf="@id/notify"
                    app:layout_constraintEnd_toStartOf="@+id/arrow_right"
                    app:layout_constraintTop_toTopOf="@id/notify"
                    tools:text="30 min before" />

                <View
                    android:id="@+id/arrow_right"
                    android:layout_width="32dp"
                    android:layout_height="32dp"
                    android:layout_marginEnd="4dp"
                    android:background="@drawable/ic_arrow_right_small"
                    app:layout_constraintBottom_toBottomOf="@id/notify"
                    app:layout_constraintEnd_toEndOf="@id/notify"
                    app:layout_constraintTop_toTopOf="@id/notify" />

            </androidx.constraintlayout.widget.ConstraintLayout>

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/add"
                style="@style/PrimaryButton"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="16dp"
                android:background="@drawable/background_button"
                android:text="@string/add" />

        </LinearLayout>

    </androidx.core.widget.NestedScrollView>
</layout>